--- a/core/runtime/Cargo.toml
+++ b/core/runtime/Cargo.toml
@@ -13,6 +13,7 @@ rust-version.workspace = true
 [dependencies]
 boa_engine.workspace = true
 boa_gc.workspace = true
+reqwest = { version = "0.12.3", optional = true }
 rustc-hash = { workspace = true, features = ["std"] }
 
 [dev-dependencies]
@@ -24,3 +25,6 @@ workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
+
+[features]
+fetch = ["reqwest"]
