--- a/core/runtime/Cargo.toml
+++ b/core/runtime/Cargo.toml
@@ -13,6 +13,7 @@ rust-version.workspace = true
 [dependencies]
 boa_engine.workspace = true
 boa_gc.workspace = true
+boa_interop.workspace = true
 reqwest = { version = "0.12.3", optional = true }
 rustc-hash = { workspace = true, features = ["std"] }
 
