--- a/core/runtime/Cargo.toml
+++ b/core/runtime/Cargo.toml
@@ -11,9 +11,12 @@ repository.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-boa_engine.workspace = true
+boa_engine = { workspace = true, features = ["either"] }
 boa_gc.workspace = true
+boa_interop.workspace = true
+either = "1"
 rustc-hash = { workspace = true, features = ["std"] }
+http = "1"
 
 [dev-dependencies]
 indoc.workspace = true
