--- a/core/runtime/Cargo.toml
+++ b/core/runtime/Cargo.toml
@@ -14,6 +14,7 @@ rust-version.workspace = true
 boa_engine.workspace = true
 boa_gc.workspace = true
 boa_interop.workspace = true
+encoding_rs = { version = "0.8.35", optional = true }
 rustc-hash = { workspace = true, features = ["std"] }
 url = { version = "2.5.3", optional = true }
 
@@ -30,8 +31,10 @@ workspace = true
 all-features = true
 
 [features]
-default = ["all"]
-all = ["url"]
+default = ["url"]
+all = ["default", "encoding"]
+encoding = ["dep:encoding_rs"]
+
 wpt-tests = []
 # This feature is used to disable compiling the WPT tests in the CI
 # when using `--all-features`. If this feature is enabled, we disable
