--- a/core/engine/Cargo.toml
+++ b/core/engine/Cargo.toml
@@ -76,6 +76,8 @@ js = ["dep:web-time", "dep:getrandom"]
 native-backtrace = []
 
 [dependencies]
+boxing = "0.1.2"
+enum-ptr = "0.2.0"
 tag_ptr.workspace = true
 boa_interner.workspace = true
 boa_gc = { workspace = true, features = ["thin-vec", "boa_string"] }
